--- a/config.default.json
+++ b/config.default.json
@@ -3,6 +3,10 @@
     "host": "0.0.0.0",
     "port": 8000
   },
+  "app": {
+    "username": "",
+    "password": ""
+  },
   "chartRepository": {
     "baseUrl": "http://chartmuseum-chartmuseum.infrastructure:8080"
   },
