--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ env:
 script:
   - curl -o build-prod.tar.gz -L "https://github.com/entwico/helm-deployer-fe/releases/download/${FRONTEND_VERSION}/dist.tar.gz"
   - tar xzf build-prod.tar.gz
-  - make vendor generate test build dist
+  - make
