--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -7,15 +7,29 @@
   version = "1.3.1"
 
 [[constraint]]
-  name = "github.com/globalsign/mgo"
-  branch = "master"
-
-[[constraint]]
   name = "github.com/Sirupsen/logrus"
   version = "0.11.5"
 
 [[constraint]]
   name = "github.com/xlab/closer"
+  branch = "master"
+
+[[constraint]]
+  name = "k8s.io/client-go"
+  version = "8.0.0"
+
+[[constraint]]
+  name = "k8s.io/api"
+  version = "kubernetes-1.11.0"
+
+[[constraint]]
+  name = "k8s.io/apimachinery"
+  version = "kubernetes-1.11.0"
+
+# To use reference package:
+#   vendor/k8s.io/kubernetes/pkg/util/parsers/parsers.go:36:16: undefined: reference.ParseNormalizedNamed
+[[override]]
+  name = "github.com/docker/distribution"
   branch = "master"
 
 [[constraint]]
